--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+  "Jwt": {
+    "Key": "your-super-secret-key-that-is-at-least-32-characters-long",
+    "Issuer": "your-app-name",
+    "Audience": "your-app-users"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "AllowedHosts": "*"
 }
