--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,7 +11,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Host=localhost;Database=your_dev_db;Username=your_username;Password=your_password;Port=5432"
   },
   "AllowedHosts": "*"
 }
