--- a/csharp-chat-api.csproj
+++ b/csharp-chat-api.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.17"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
+        <PackageReference Include="Riok.Mapperly" Version="4.3.0-next.1"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
